--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "nodemon": "nodemon src/app.js"
   },
   "dependencies": {
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "mongoose": "^9.1.4"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
