--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "nodemon": "nodemon src/app.js"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
     "express": "^5.2.1",
+    "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.4",
     "validator": "^13.15.26"
   },
